--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,24 @@
 <html lang="">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
-  <style type="text/css">
-    body {
-      padding: 0;
-      margin: 0;
-      min-height: 100vh;
-      /* background-color:white; */
-      /* background-image: linear-gradient(135deg, #fff, #eee,#ddd,#ccc,#bbb,#aaa);
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title>
+        Leoyi-个人博客
+    </title>
+    <style type="text/css">
+        body {
+            padding: 0;
+            margin: 0;
+            min-height: 100vh;
+            /* background-color:white; */
+            /* background-image: linear-gradient(135deg, #fff, #eee,#ddd,#ccc,#bbb,#aaa);
       background-size: 400%;
       animation: backgroudanimation 60s infinite; */
-    }
-
-    /* @keyframes backgroudanimation {
+        }
+        /* @keyframes backgroudanimation {
       0% {
         background-position: 0% 50%;
       }
@@ -33,16 +32,16 @@
         background-position: 0% 50%;
       }
     } */
-  </style>
+    </style>
 </head>
 
 <body>
-  <noscript>
+    <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
 </body>
 
 </html>
