--- a/public/index.html
+++ b/public/index.html
@@ -14,25 +14,10 @@
         body {
             padding: 0;
             margin: 0;
+            outline: 0;
+            border: 0;
             min-height: 100vh;
-            /* background-color:white; */
-            /* background-image: linear-gradient(135deg, #fff, #eee,#ddd,#ccc,#bbb,#aaa);
-      background-size: 400%;
-      animation: backgroudanimation 60s infinite; */
         }
-        /* @keyframes backgroudanimation {
-      0% {
-        background-position: 0% 50%;
-      }
-
-      50% {
-        background-position: 100% 50%;
-      }
-
-      100% {
-        background-position: 0% 50%;
-      }
-    } */
     </style>
 </head>
 
