--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <title>
         Leoyi-个人博客
     </title>
+    <meta name="description" content="leoyi个人博客,记录工作学习中遇到的代码问题">
+    <meta name="keywords" content="leoyi,blog,编程,博客">
+    <meta name="author" content="leoyi">
     <style type="text/css">
         body {
             padding: 0;
