保存外部cdn资源到本地

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,12 @@
             min-height: 100vh;
         }
     </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
-    <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
+    <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script> -->
+    <link rel="stylesheet" href="./assets/katex@0.11.1.min.css">
+    <script src="./assets/katex@0.11.1.min.js"></script>
+    <script src="./assets/mermaid.min.js"></script>
 </head>
 
 <body>
