--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <link rel="icon" href="<%= BASE_URL %>logo.ico">
     <title>
-        Leoyi的个人博客
+        leoyi编程日志
     </title>
     <meta name="description" content="leoyi个人博客,记录工作学习中遇到的代码问题">
     <meta name="keywords" content="leoyi,blog,编程,博客">
